[package]
name = "stable_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
num_cpus = "1.15.0"
serde = { version = "1.0.152", features = ["derive"] }
stateright = { git = "https://github.com/stateright/stateright" }

# [profile.release]
# lto="fat"
